ch03/argo-rollouts/resources/argo-rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: argo-rollouts.192.168.1.54.nip.io
    http:
      paths:
      - backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
        path: "/"
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argo-rollouts.192.168.1.54.nip.io
    secretName:  argo-rollouts-credential

    # - http:
    #     paths:
    #       - path: /dashboard
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: argo-rollouts-dashboard
    #             port:
    #               number: 3100
